# OptiXDenoiser

./: CMakeLists.txt  OptixDenoiser.nk  README.md  building_step_by_step.txt
LINUX/: CMakeLists.txt  COMPILE_STEPBYSTEP.txt
LINUX/Nuke14.1v2_Cuda12.1_Optix7.6_DEBUG_version/: CMakeLists.txt  COMPILE_STEPBYSTEP.txt
LINUX/Nuke14.1v2_Cuda12.1_Optix7.6_DEBUG_version/src/: OptiXDenoiser.cpp  OptiXDenoiser.h
OptiXDenoiser_Optix9.1_Cuda13.1_Nuke17.0/: CMakeLists.txt  COMPILE_STEPBYSTEP.txt
OptiXDenoiser_Optix9.1_Cuda13.1_Nuke17.0/src/: OptiXDenoiser.cpp  OptiXDenoiser.h
UPDATE/src/: OptiXDenoiser.cpp  OptiXDenoiser.h
WIN/: CMakeLists.txt  COMPILE_STEPBYSTEP.txt
WINDOWS/: CMakeLists.txt  building_step_by_step.txt
src/: OptiXDenoiser.cpp  OptiXDenoiser.h
